# OmniVera

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PRD.md  TECHNICAL_DOCUMENTATION.md
samples/deep_research/: deep_research_report.md
samples/reddit/: sample_reddit_data.csv
samples/transcripts/: interview_01_priya.md  interview_02_marcus.md  interview_03_dani.md
scripts/: build_index.py  build_sample_pdf.py  check_secrets.sh  ingest_deep_research.py  ingest_reddit.py  load_samples.py  run_agent.py  run_chat.py  run_chat_server.py  run_pipeline.py  run_web_intake.py  smoke_test.py  test_retrieval.py
src/icp_agent/: chat.py  chat_web.py  intake.py  models.py  pipeline.py  rag.py  transcripts.py  web.py
src/icp_agent/agent/: __init__.py  loop.py  prompts.py  tools.py
templates/: chat.html  intake.html
tests/: test_agent_loop.py  test_agent_tools.py  test_chat.py  test_ingest_deep_research.py  test_intake.py  test_load_samples.py  test_models.py  test_pipeline.py  test_rag.py  test_sample_pdf.py  test_transcripts.py
